--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <body>
-    <div class="main">
+    <div  class="main">
         <section class="sign-in">
             <div class="container">
                 <div class="signin-content">
@@ -10,25 +10,27 @@
                     </div>
                     <div class="signin-form">
                         <h2 class="form-title">Login</h2>
-                        <form method="POST" class="register-form" id="login-form">
+                        <form class="sign-in-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()"[autocomplete]="false">
                             <div class="form-group">
                                 <label for="your_name"><i class="mdi mdi-account"></i></label>
-                                <input type="text" name="your_name" id="your_name" placeholder="Your Name" />
+                                <input formControlName="email" type="text" name="username" id="email"
+                                    placeholder="Username" />
                             </div>
                             <div class="form-group">
                                 <label for="your_pass"><i class="mdi mdi-lock"></i></label>
-                                <input type="password" name="your_pass" id="your_pass" placeholder="Password" />
+                                <input formControlName="password" type="password" name="password" id="password"
+                                    placeholder="Password" />
                             </div>
                             <div class="form-group">
                                 <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
-                                <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember
-                                    me</label>
+                                <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
                             </div>
                             <div class="form-group form-button">
-                                <input type="submit" name="signin" id="signin" class="form-submit" value="Log in" />
+                                <input  type="submit" name="signin" id="signin" class="form-submit"
+                                    value="Log in" />
                             </div>
                         </form>
-                        
+
                     </div>
                 </div>
             </div>
